# aoc2025

./: Cargo.toml  README.md
.claude/: settings.json
common/: Cargo.toml
common/src/: lib.rs
day01/: Cargo.toml
day02/: Cargo.toml
day03/: Cargo.toml
day04/: Cargo.toml
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day07/: Cargo.toml
day08/: Cargo.toml
day09/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day12/: Cargo.toml
